--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   font-weight: 500;
   color: rgba(0, 0, 0, 0.87);
+  background-color: rgb(219 234 254)
 }
 
 @tailwind base;
